Building out compliance page. Resource section.

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -16,7 +16,7 @@ priority: "0.9"
 
 = partial "partials/snippets/platform-icons"
 
-section#compliance-top.section-article
+section#compliance-top.section-article.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/50WC8N3lz2k0K4o0WQYE4A/96d25d0d7f385f8cfc82950e78285a8a/hex-pattern-light-bg.svg"
   .row.align-center
     .columns.small-12.medium-12.large-8.text-center
       h1.headline-2.group= current_page.data.title
@@ -48,7 +48,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
           h3.headline-4 Compliant  Kubernetes<br /> Service
           p.lead Get the scalable power of Kubernetes in a secure cluster
         .card-section.card-section--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/cks/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
       .blob-color.blob-cks.z-auto data-glow="false"
     .column.text-center.relative.has-blob
       .card.container-color--trans.relative.z-5
@@ -58,7 +58,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
           h3.headline-4 Compliant Platform  as a Service
           p.lead Build & deploy digital health apps on a compliant, hosted platform
         .card-section.card-section--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/cpaas/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
       .blob-color.blob-cpaas.z-auto data-glow="false"
     .column.text-center.relative.has-blob
       .card.container-color--trans.relative.z-5
@@ -68,22 +68,51 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
           h3.headline-4 Cloud Compliance Management System
           p.lead Know the precise compliance state of your cloud environments
         .card-section.card-section--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/ccms/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
       .blob-color.blob-ccms.z-auto data-glow="false"
 .strip-bright
 
 section#compliance-video.section-article.bg-gray-11
   .row.group.align-center
     .columns.small-12.text-center
-      h2.headline-2 Understanding Cloud Compliance
-  .row.align-center.group
-    .columns.small-12.medium-12.large-8.text-center
-      .video.drop--big
+      h2.headline-2 Understanding Compliance in the Cloud
+      p.lead (paragraph on the problems of compliance.) Here are some resources to get you started.
+  .row.align-center.align-middle.group--2x
+    .columns.small-12.medium-6.large-8.text-center
+      .video
         script async="" src="//fast.wistia.com/embed/medias/1o1udvaa6z.jsonp"
         script async="" src="//fast.wistia.com/assets/external/E-v1.js"
         .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;")
           .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;"
-            span.wistia_embed.wistia_async_1o1udvaa6z class=("popover=true popoverAnimateThumbnail=true videoFoam=true") style="display:inline-block;height:100%;width:100%"   
+            span.wistia_embed.wistia_async_1o1udvaa6z class=("popover=true popoverAnimateThumbnail=true videoFoam=true") style="display:inline-block;height:100%;width:100%"
+    .columns.small-12.medium-6.large-4
+      .line-length
+        h4.headline-4 Travis Good, MD on Compliance in Healthcare
+        p Dr. Good gives an overview of some of the compliance challenges in healthcare. 
+
+  .row.align-spaced.align-middle.collapse.group
+    - book_thumb = "https://images.ctfassets.net/frc0x3twtm4f/4NsK3lp2NGGCYCm0uC0i0S/e1b7ade9c1344896efeb6db3cf6056d1/compliance_book__3d_front_and_back_mockup.png"
+    .columns.small-12.medium-8.large-6
+      h4.headline-4
+        a class="text-bold" href="https://completecloudcompliance.com/" rel="external" title="Complete Cloud Compliance Book" Complete Cloud Compliance: 
+        | The Book
+      h5.headline-5 Regulated companies have a hard problem to solve.
+      p They run the risk of becoming obsolete due to an inability to adopt new technology fast enough. Incumbent business models will be out-flanked by shifting customer expectations brought on by improved digital experiences. Market conditions are out of their control. Even healthcare, the most regulated industry with the heartiest entrenchment and uniquely perverse economic incentives, is remarkably close to complete upheaval due to a litany of world-changing ideas, like mobile devices, Internet of Things, big data, and artificial intelligence. It all stems from the mother of all recent innovations, the cloud. The root challenge is the adoption of cloud computing in order to remain relevant. If achieved, compliant cloud computing becomes an organizational differentiator.
+      
+      p Compliance contributes to this existential threat because it prompts the cloud to be viewed as a liable cost center by most regulated companies. But that’s wrong. It’s actually a leverageable asset that is at the foundation of modern business transformation. 
+      
+      p Complete Cloud Compliance is a program developed after years of managing high-stakes compliance requirements across mission critical healthcare workloads. It is a chance to control destiny. The program is written for healthcare organizations, but all while under the principle that best practices are best practices, meaning the insights shared can be applied across global regimes and any industry.
+    .columns.small-12.medium-4.large-4
+      a class="text-italic" href="https://completecloudcompliance.com/" rel="external" title="Complete Cloud Compliance Book"
+        img.lozad alt="Complete Cloud Compliance" src=book_thumb+'?w=150&fm=png&fl=png8' data-src=book_thumb+'?w=600'
+  .row.align-center.align-middle
+    .columns.flex-container.align-middle.align-center.small-12.medium-6.large-4.text-center.pad--xl
+      img.lozad data-src="http://images.ctfassets.net/189dvqdsjh46/2yyrhvg12wySaoSgyQ6C6G/0ec44a3443d3e89690e511f8f85d44fe/guide-tco-compliance-2018-thumb.png?fit=thumb&w=500&h=500" alt="Guide" width="250"
+    .columns.small-12.medium-6.large-6
+      .line-length
+        h3.headline-3.text-bold.nomargin Datica Guides
+        p.lead Datica Guides are written by experts in healthcare technology, compliance, and security.
+        
   /.row.group.align-center
     .columns.small-12.medium-6.large-4
 
