--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Cloud Compliance Management System"
-summary: "Datica's Cloud Compliance Management System (CCMS) will be the first-ever tool to compliance assurance of managed cloud-native services."
+summary: "Datica's Cloud Compliance Management System (CCMS) will be the first-ever tool to guide compliance assurance of managed cloud-native services."
 navTitle: "Datica CCMS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
