--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -128,7 +128,7 @@ section.section-article.container-gray-5.text-center
       h3.headline-4 One REST API for all your connections
       img.img-crisp.lozad alt=("One REST API for all your connections") data-src="/public/img/platform-one-api-diagram.png" /
 
-section.section-article.container-gray-12
+section#services.section-article.container-gray-12
   .row.align-center
     .columns.small-12
       h2.headline-3.text-center.group
