--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -432,23 +432,28 @@ $underline: false !default;
         background-blend-mode: overlay;
     }
 }
-@mixin gradient-cks {
+@mixin gradient-cks($dir: to right) {
     /* blue to blue-purple */
-    background: linear-gradient(182.16deg, #4CC0F1 6.72%, #6929D1 96.96%);
+    background: linear-gradient($dir, #4CC0F1 6.72%, #6929D1 96.96%);
     color: white;
 }
-@mixin gradient-cpaas {
+@mixin gradient-cpaas($dir: to right) {
     /* blue-green */
-    background: linear-gradient(160.12deg, #008FDF -5.71%, #00E3BA 82.93%);
+    background: linear-gradient($dir, #008FDF -5.71%, #00E3BA 82.93%);
     color: white;
 }
-@mixin gradient-ccms {
+@mixin gradient-ccms($dir: to right) {
     /* blue-purple */
-    background: linear-gradient(186.37deg, #4C66F1 2.29%, #D129C3 98.71%);
+    background: linear-gradient($dir, #4C66F1 2.29%, #D129C3 98.71%);
     color: white;
 }
-@mixin gradient-cmi {
-    /* red-purple to yellow */
-    background: linear-gradient(211.62deg, #CE2F98 16.59%, #FEA869 73.44%, #FFE76A 99.57%);
+@mixin gradient-cmi($dir: to right) {
+    /* red-purple - orange */
+    background: linear-gradient($dir, #DD48AA 16.59%, #FFE177 99.57%);
+    color: white;
+}
+@mixin gradient-services($dir: to right) {
+    /* red - pale green */
+    background: linear-gradient($dir, #E6699E 13.96%, #7AB2E9 57.53%, #08E1D4 96.11%);
     color: white;
 }
