--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -24,9 +24,9 @@ priority: "0.9"
       / = partial "partials/snippets/button", :locals => { :label => "Get solutions to your compliance challenges", :url => "/demo/", :button_classes => "button success", :item_id => "cta_top-demo", :icon => "icon-angle-down", :icon_align => "right" }
 section#compliance-who
   .row.align-center.full-width.collapse
-    .columns.flex-container.align-middle.small-12.medium-6.large-6.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/UxwNUvgCQwOgCYEKea6sS/f261741ae95584c903a4d8d69ef3c528/developers__team_workspace_-_annie-spratt-608001-unsplash.jpg?fit=crop&w=1200&h=800"
+    .columns.flex-container.align-middle.small-12.large-6.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/UxwNUvgCQwOgCYEKea6sS/f261741ae95584c903a4d8d69ef3c528/developers__team_workspace_-_annie-spratt-608001-unsplash.jpg?fit=crop&w=1200&h=800"
       h1.headline-1.text-bold.nomargin.pad--xl.text-center The challenges of compliance are slowing you down
-    .columns.small-12.medium-6.large-6.bg-gray-10
+    .columns.small-12.large-6.bg-gray-10
       .line-length.pad--xl
         h3.headline-3
           | (identifying attributes)
@@ -34,13 +34,13 @@ section#compliance-who
         p Large organizations are hesitant to migrate to AWS or Azure because they are concerned compliance requirements aren't being met. When they can't be sure, they stick with old infrastructure.
         h4.headline-4 If you are new…
         p Emerging digital products can't break through to their enterprise customers unless they demonstrate compliance and security credibility from Day One. Compliance is central to the business model.
-        .logo-cloud
-          - data.views.home.badges.each do |logo|
-            - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
-            img alt="#{logo["name"]}" class="logo-cloud--item logo-size--#{logo['logoSize']} lozad #{logopad}" data-src="#{logo["fileUrl"]}" /
+      .logo-cloud
+        - data.views.home.badges.each do |logo|
+          - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
+          img alt="#{logo["name"]}" class="logo-cloud--item logo-size--#{logo['logoSize']} lozad #{logopad}" data-src="#{logo["fileUrl"]}" /
 / .strip-bright
 
-section#compliance.section-article.bg-gray-11
+/ section#compliance.section-article.bg-gray-11
   .row.group.align-center
     .columns.small-12.text-center
       h2.headline-2 Understanding Compliance in the Cloud
